--- a/src/components/ThemeToggle/ThemeToggle.module.css
+++ b/src/components/ThemeToggle/ThemeToggle.module.css
@@ -1,28 +1,24 @@
 .wrapper {
-  display: none;
+  max-width: 0px;
+  margin-right: 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  transition: all 0.5s ease;
+  overflow: hidden;
 }
 
-@media screen and (min-width: 768px) {
-  .wrapper {
-    max-width: 0px;
+.logo {
+  height: 18px;
+}
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.opened {
+  margin-right: 20px;
+  max-width: 200px;
+}
 
-    transition: max-width 0.5s ease;
-    overflow: hidden;
-  }
-
-  .logo {
-    height: 18px;
-  }
-
-  .opened {
-    max-width: 160px;
-  }
-
-  .toggle {
-    margin-left: 32px;
-  }
+.toggle {
+  margin-left: 32px;
 }
