--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'TTNorms';
+  font-weight: 400;
+  font-style: normal;
+
+  src: url('./assets/fonts/TT_Norms_Pro_Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'TTNorms';
+  font-weight: 500;
+  font-style: normal;
+
+  src: url('./assets/fonts/TT_Norms_Pro_Medium.woff') format('woff');
+}
+
 :root {
   --space: #141E2D;
   --blue-main: #3393FF;
@@ -14,9 +30,10 @@
   --yellow: #FFC126;
   --red: #DB233A;
 
+  --bp-tablet: 768px;
+
   font-family: 'TTNorms', sans-serif;
   font-weight: 400;
-  font-style: normal;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,4 +47,14 @@
   padding: 0;
   margin: 0;
   border: none;
+}
+
+html, body {
+  height: 100vh;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
