--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -36,7 +36,7 @@
 
 .menuGroup:not(:last-of-type):after {
   content: '';
-  width: calc(100% - 20px);
+  width: calc(100% - 40px);
   height: 1px;
 
   position: absolute;
@@ -48,6 +48,7 @@
 
 .menuItem {
   padding: 10px 20px;
+  max-height: 40px;
 
   display: flex;
   align-items: center;
@@ -56,22 +57,44 @@
   white-space: nowrap;
   cursor: pointer;
   position: relative;
+  overflow: hidden;
 }
 
 .menuItem:hover {
   background-color: color-mix(in srgb, var(--blue-main) 10%, var(--white));
 }
 
-.menuItem:hover::before {
+.menuItem::before {
   content: '';
-  width: 6px;
+  width: 100%;
   height: 100%;
+  max-width: 100%;
+  display: none;
 
   position: absolute;
   top: 0;
   left: 0;
 
   background-color: var(--blue-main);
+  transition: max-width 0.3s ease;
+}
+
+.menuItem.active {
+  background: none;
+}
+
+.menuItem.active::before {
+  display: block;
+}
+
+.menuItem:hover::before {
+  content: '';
+  max-width: 6px;
+  display: block;
+}
+
+.menuItem.active:hover::before {
+  max-width: 100%;
 }
 
 .menuGroup:first-of-type .menuItem:last-child {
@@ -82,6 +105,12 @@
   width: 20px;
   height: 20px;
   object-fit: cover;
+
+  position: relative;
+}
+
+.menuItem.active .menuIcon {
+  filter: invert();
 }
 
 .menuText {
@@ -90,6 +119,15 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
+}
+
+.menuItem.active .menuText {
+  position: relative;
+  color: var(--white);
+}
+
+.subgroup {
+  
 }
 
 @media screen and (max-width: 767px) {
@@ -111,6 +149,7 @@
 
 @media screen and (min-width: 768px) {
   .wrapper {
+    padding: 10px 0 20px 0;
     height: 100%;
     max-width: 60px;
 
@@ -122,7 +161,20 @@
     display: none;
   }
 
-  .opened {
+  .wrapper.opened {
+    padding: 10px 20px 20px 0;
     max-width: 260px;
+  }
+
+  .menuText {
+    display: none;
+  }
+
+  .opened .menuText {
+    display: inline;
+  }
+
+  .opened .menuGroup:not(:last-of-type):after {
+    width: calc(100% - 20px);
   }
 }
