--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -4,6 +4,7 @@
 
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
 
   overflow-x: hidden;
   overflow-y: auto;
@@ -134,6 +135,7 @@
   .wrapper {
     padding: 10px 0 20px 0;
     height: 100%;
+    width: 260px;
     max-width: 60px;
 
     position: static;
