--- a/src/components/OrderVPS/OrderVPS.module.css
+++ b/src/components/OrderVPS/OrderVPS.module.css
@@ -32,8 +32,26 @@
 
 .cards {
   margin-top: 20px;
-  
+
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
+}
+
+@media screen and (min-width: 540px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (min-width: 1022px) {
+  .cards {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
