--- a/src/components/PlanCard/PlanCard.module.css
+++ b/src/components/PlanCard/PlanCard.module.css
@@ -18,3 +18,34 @@
   font-size: 12px;
   line-height: 17px;
 }
+
+.price {
+  margin-top: 20px;
+
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 26px;
+}
+
+.specs {
+  margin-top: 20px;
+}
+
+.specsItem {}
+
+.specsItem:not(:first-child) {
+  margin-top: 12px;
+}
+
+.caption {
+  font-size: 12px;
+  line-height: 17px;
+  color: var(--grey-4);
+}
+
+.specsValue {
+  margin-left: 12px;
+  
+  font-size: 16px;
+  line-height: 21px;
+}
