--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
 
   font-family: 'TTNorms', sans-serif;
   font-weight: 400;
+  color: var(--space);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
