--- a/src/components/OrderVPS/OrderVPS.module.css
+++ b/src/components/OrderVPS/OrderVPS.module.css
@@ -28,30 +28,24 @@
 
 .filter {
   margin-top: 20px;
+  max-width: 100%;
 }
 
 .cards {
   margin-top: 20px;
 
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 20px;
 }
 
-@media screen and (min-width: 540px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
 @media screen and (min-width: 768px) {
-  .cards {
-    grid-template-columns: repeat(3, 1fr);
+  .filter {
+    max-width: 240px;
   }
-}
 
-@media screen and (min-width: 1022px) {
   .cards {
-    grid-template-columns: repeat(4, 1fr);
-  }
+    justify-content: flex-start;
+  }  
 }
