--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -131,12 +131,12 @@
   
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 540px) {
   .wrapper {
     padding: 10px 0 20px 0;
     height: 100%;
     width: 260px;
-    max-width: 60px;
+    max-width: 0px;
 
     position: static;
     transition: all 0.3s ease;
@@ -164,7 +164,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 539px) {
   .wrapper {
     width: 100%;
     height: calc(100vh - 60px); 
@@ -179,5 +179,11 @@
 
   .opened {
     transform: translateX(100%);
+  }
+}
+
+@media screen and (min-width: 1022px) {
+  .wrapper {
+    max-width: 60px;
   }
 }
