--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -3,5 +3,13 @@
   height: 100%;
 
   display: flex;
-  overflow: hidden;
+}
+
+@media screen and (min-width: 1022px) {
+  .wrapper {
+    padding-right: 20px;
+
+    position: relative;
+    z-index: 1;
+  }
 }
