--- a/src/components/OrderVPS/OrderVPS.module.css
+++ b/src/components/OrderVPS/OrderVPS.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
 
-  overflow-y: auto;
+  background-color: var(--white);
 }
 
 .header {
@@ -48,4 +48,10 @@
   .cards {
     justify-content: flex-start;
   }  
+}
+
+@media screen and (min-width: 1022px) {
+  .wrapper {
+    box-shadow: 0 0 10px 0 #B7C3D280;
+  }
 }
