--- a/src/components/Placeholder/Placeholder.module.css
+++ b/src/components/Placeholder/Placeholder.module.css
@@ -7,7 +7,20 @@
 }
 
 .title {
-  font-size: 60px;
+  font-size: 40px;
   font-weight: 500;
   color: var(--grey-1);
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 50px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .title {
+    font-size: 60px;
+  }
 }
