--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -134,7 +134,6 @@
 @media screen and (min-width: 540px) {
   .wrapper {
     padding: 10px 0 20px 0;
-    height: 100%;
     width: 260px;
     max-width: 0px;
 
@@ -185,5 +184,7 @@
 @media screen and (min-width: 1022px) {
   .wrapper {
     max-width: 60px;
+    position: relative;
+    z-index: 1;
   }
 }
