--- a/src/components/OrderVPS/OrderVPS.module.css
+++ b/src/components/OrderVPS/OrderVPS.module.css
@@ -52,6 +52,6 @@
 
 @media screen and (min-width: 1022px) {
   .wrapper {
-    box-shadow: 0 0 10px 0 #B7C3D280;
+    box-shadow: 1px 1px 4px 0 #B7C3D280;
   }
 }
