--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -168,6 +168,20 @@
   background-color: var(--green);
 }
 
+.close {
+  width: 20px;
+  height: 17px;
+
+  background: url('../../assets/images/burger.svg') no-repeat 50% 50%;
+  background-size: cover;
+
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
+  display: none;
+}
+
 @media screen and (min-width: 540px) {
   .wrapper {
     padding: 10px 0 20px 0;
@@ -202,11 +216,12 @@
 
 @media screen and (max-width: 539px) {
   .wrapper {
+    padding-top: 60px;
     width: 100%;
-    height: calc(100vh - 60px); 
+    height: 100vh; 
     
     position: fixed;
-    top: 60px;
+    top: 0px;
     right: 100%;
     z-index: 100;
 
@@ -215,6 +230,10 @@
 
   .opened {
     transform: translateX(100%);
+  }
+
+  .close {
+    display: block;
   }
 }
 
